--- a/src/styles/archive/archiveList.module.css
+++ b/src/styles/archive/archiveList.module.css
@@ -36,10 +36,10 @@
     display: grid;
     grid-template-columns:
         minmax(40px, 0.09fr)     /* Thumbnail */
-        minmax(200px, 1.3fr)      /* Project Name */
+        minmax(150px, 1.3fr)      /* Project Name */
         minmax(50px, 0.1fr)    /* Dots */
-        minmax(130px, 0.5fr)     /* Tags */
-        minmax(160px, 0.75fr)    /* Comments */
+        minmax(200px, 0.55fr)     /* Tags */
+        /* minmax(160px, 0.75fr)     Comments */
         minmax(70px, 0.15fr);    /* Date */
 
     padding: 0 0;
