--- a/src/styles/archive/sidebar.module.css
+++ b/src/styles/archive/sidebar.module.css
@@ -27,7 +27,7 @@
   background-color: rgba(var(--brand-grey-rgb), 0.20);
 }
 
-.catItem {
+.tagItem {
     display: flex;
     align-items: center;
     gap: 0.9rem;            /* space between dot and label */
@@ -35,14 +35,14 @@
   }
 
 
-.favItem {
+.favItem, .catItem{
     display: flex;
     align-items: center;
-    gap: 0.4rem;            /* space between dot and label */
+    gap: 0.4rem; 
     cursor: pointer;
   }
 
-  .folderIcon {
+.folderIcon {
     position: relative;
 
     color: var(--brand-blue);
