--- a/src/styles/archive/sidebar.module.css
+++ b/src/styles/archive/sidebar.module.css
@@ -45,4 +45,9 @@
 .folderIcon {
     position: relative;
     color: var(--folder-blue);
-  }
+}
+
+.catItem .folderIcon{
+    position: relative;
+    color: var(--folder-turquoise);
+}
