--- a/src/styles/archive/previewPane.module.css
+++ b/src/styles/archive/previewPane.module.css
@@ -2,8 +2,9 @@
   position: absolute;
   right: 0;
   top: 0;
+  bottom:0;
   width: var(--space-preview-pane);
-  height: 100%;
+  height: auto;
   background: var(--color-background);
   border-left: 1px solid var(--color-line);
   transform: translateX(100%);
