--- a/src/styles/ui/row.module.css
+++ b/src/styles/ui/row.module.css
@@ -65,6 +65,7 @@
     outline: none;
     background-color: var(--brand-blue) !important;
     --archive-title-color: white;
+    --dot-ring: white;  
   }
 
 
