--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -122,8 +122,9 @@ h2 a::after {
     overflow: hidden;
   
     /* bottom-most layer = photo wallpaper */
-    background: url("/wallpaper.jpg") /*center/cover no-*/repeat;
+    background: url("/wallpaper-light.jpg") /*center/cover no-*/repeat;
     background-size: 30px 30px;
+
   }
   
   /* translucent 10 % gradient on top */
@@ -132,13 +133,19 @@ h2 a::after {
     position: absolute;
     inset: 0;
     background: linear-gradient(
-      135deg,
+      360deg,
       var(--bg1) 0%,
-      var(--bg2) 0%,
-      var(--bg3) 0%
+      var(--bg2) 30%,
+      var(--bg3) 100%
     );
-    opacity: 1;                 /* 10 % */
-    pointer-events: none;         /* never block clicks */
+    opacity: 1;
+    pointer-events: none;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    .desktop-root {
+      background-image: url('/wallpaper-dark.jpg');
+    }
   }
 
 .icon-grid {
