--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -15,9 +15,9 @@
   --color-text: #222;
   --color-line: rgba(120, 120, 128, 0.4);
 
-  --bg1: hsla(266deg 100% 95% / 1);  /* ↑ L from 50 → 88 */
-  --bg2: hsla(267deg 100% 90% / 1);  /* ↑ 39 → 75  */
-  --bg3: hsla(224deg 100% 80% / 1);  /* ↑ 22 → 60  */
+  --bg1: hsla(266deg 100% 95% / 1);
+  --bg2: hsla(267deg 100% 90% / 1);
+  --bg3: hsla(224deg 100% 80% / 1);
   
 
    /* Spacing */
@@ -118,9 +118,9 @@
     --color-foreground-rgb: 237, 237, 237;
     --color-line: rgba(252, 252, 252, 0.2);
 
-    --bg1: hsla(266deg 100% 35% / 1);  /* ↑ L from 50 → 88 */
-    --bg2: hsla(267deg 100% 30% / 1);  /* ↑ 39 → 75  */
-    --bg3: hsla(224deg 100% 20% / 1);  /* ↑ 22 → 60  */
+    --bg1: hsla(266deg 100% 35% / 1);
+    --bg2: hsla(267deg 100% 30% / 1);
+    --bg3: hsla(224deg 100% 20% / 1);
   
     --shadow-xs: 0 1px 2px rgba(255, 255, 255, 0.05);
     --shadow-sm: 0 2px 4px rgba(255, 255, 255, 0.05);
