--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -4,7 +4,8 @@
     /* font variation settings: "opsz" auto, "wght" (specific) */
   --var-sm:  "wght" 400;
   --var-md:  "wght" 480;
-  --var-lg:  "wght" 680;
+  --var-lg:  "wght" 580;
+  --var-xl:  "wght" 680;
 
 
   /* Light Mode */
@@ -39,7 +40,7 @@
   --font-xxs: calc(11rem/ 16);
   --font-xs: calc(12rem/ 16);
   --font-sm: calc(13rem/ 16);
-  --font-md: calc(14.5rem/ 16);
+  --font-md: calc(15rem/ 16);
   --font-lg: calc(23rem/ 16);
   --font-xl: calc(35rem/ 16);
   --font-2xl:calc(45rem/ 16);
