--- a/src/styles/archive/archiveItem.module.css
+++ b/src/styles/archive/archiveItem.module.css
@@ -135,3 +135,23 @@
     }
 
 }
+
+/* src/styles/archive/archiveList.module.css */
+
+/* define row height -- match your .row4col height */
+
+  
+  /* repeat a stripe every row */
+  .scroller {
+    background-size: auto var(--archive-row-height);
+    background-image: repeating-linear-gradient(
+      to bottom,
+      transparent 0,
+      transparent calc(2rem - 1px),
+      rgba(var(--brand-grey-rgb), 0.07) calc(var(--archive-row-height) - 1px),
+      rgba(var(--brand-grey-rgb), 0.07) var(--archive-row-height)
+    );
+  }
+  
+  /* existing .row4col nth-child styling will override stripes for actual rows */
+  
