fix: system brand grey css

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -73,7 +73,7 @@
   --brand-grey-rgb: 120, 120, 128;
   */
   --brand-grey: #787880;
-  --brand-grey-rgb: 120, 120, 128;
+  --brand-grey-rgb: 111,162,208;
 
   --brand-blue: #0364E1;
   --brand-blue-rgb: 3, 100, 225;
