--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -71,6 +71,7 @@
   /*
   --brand-grey: #787880;
   --brand-grey-rgb: 120, 120, 128;
+  --brand-grey-rgb: 111,162,208;
   */
   --brand-grey: #787880;
   --brand-grey-rgb: 115, 147, 179;
