--- a/src/styles/archive/sidebar.module.css
+++ b/src/styles/archive/sidebar.module.css
@@ -1,7 +1,8 @@
 .title {
   margin: var(--space-md) var(--space-sm) var(--space-sm) var(--space-sm);
-  font-size: var(--font-xs);
-  color: rgba(var(--brand-grey-rgb), 0.7);
+  font-size: var(--font-xxs);
+  color: rgba(var(--color-foreground-rgb), 0.4);
+  font-variation-settings: var(--var-xl);
 }
 
 .list {
