--- a/src/styles/ui/sidebar.module.css
+++ b/src/styles/ui/sidebar.module.css
@@ -13,4 +13,14 @@
   .sidebar::-webkit-scrollbar {
     display: none;
   }
+
+  @media (max-width: 768px) {
+
+    .sidebar {
+    
+        display: flex;
+        flex-direction: column;
+      }
+
+  }
   
