css: unifies border box shadows

--- a/src/styles/archive/pagination.module.css
+++ b/src/styles/archive/pagination.module.css
@@ -6,7 +6,7 @@
     gap: 0.1rem;
     background-color: rgba(var(--brand-grey-rgb), 0.12);
     /* border-top: 1px solid rgba(0,0,0,.15); */
-    box-shadow: 0 -1px 1px 0 rgba(0, 0, 0, .15);
+    box-shadow: 0 -1px 1px 0 rgba(0, 0, 0, 0.15);
     z-index: 1000;
 }
 
