--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -122,7 +122,7 @@ h2 a::after {
     overflow: hidden;
   
     /* bottom-most layer = photo wallpaper */
-    background: url("/wallpaper.png") center/cover no-repeat;
+    background: url("/wallpaper.jpg") center/cover no-repeat;
     /* background-size: 30px 30px; */
 
   }
@@ -146,7 +146,7 @@ h2 a::after {
 
   @media (prefers-color-scheme: dark) {
     .desktop-root {
-        background: url("/wallpaper.png")  center/cover no-repeat;
+        background: url("/wallpaper.jpg")  center/cover no-repeat;
     }
   }
 
