--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -17,10 +17,10 @@
   --color-line: rgba(120, 120, 128, 0.4);
 
 
-  --bg1: hsl(223 50% 52% / 1);  /* indigo-navy */
-  --bg2: hsl(262 43% 57% / 1);  /* iris */
-  --bg3: hsl(190 42% 52% / 1);  /* teal-cyan */
-  --bg4: hsl(43  62% 52% / 1);  /* brass/gold accent */
+  --bg1: hsl(223, 100%, 65%);
+  --bg2: hsl(262, 100%, 81%);
+  --bg3: hsl(354, 100%, 66%);
+  --bg4: hsl(43, 100%, 70%);
 
   
 
@@ -77,7 +77,7 @@
   --brand-grey-rgb: 111,162,208;
   */
   --brand-grey: #787880;
-  --brand-grey-rgb: 115, 147, 179;
+  --brand-grey-rgb: 150,165,180;
 
   --brand-blue: #0364E1;
   --brand-blue-rgb: 3, 100, 225;
@@ -125,10 +125,10 @@
 
 
 
-    --bg1: hsl(223 52% 16% / 1);
-    --bg2: hsl(262 44% 28% / 1);
-    --bg3: hsl(190 44% 26% / 1);
-    --bg4: hsl(43  64% 40% / 1);
+    --bg1: hsl(224, 100%, 29%);
+    --bg2: hsl(275, 100%, 32%);
+    --bg3: hsl(337, 100%, 31%);
+    --bg4: hsl(43, 100%, 31%);
     
     
 
