--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -151,6 +151,7 @@ h2 a::after {
     position: absolute;
     inset: 0;
     pointer-events: none;
+    opacity: 0;
   
     background:
       radial-gradient(100% 100% at var(--b1x) var(--b1y), var(--bg1) -100%, transparent),
