--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -17,7 +17,7 @@
   --color-line: rgba(120, 120, 128, 0.4);
 
 
-  --bg1: hsl(224, 100%, 70%);
+  --bg1: hsl(224, 100%, 70%); 
   --bg2: hsl(275, 100%, 72%);
   --bg3: hsl(115, 100%, 71%);
   --bg4: hsl(43, 100%, 71%);
@@ -77,7 +77,7 @@
   --brand-grey-rgb: 111,162,208;
   */
   --brand-grey: #787880;
-  --brand-grey-rgb: 150,165,180;
+  --brand-grey-rgb: 173, 173, 179;
 
   --brand-blue: #0364E1;
   --brand-blue-rgb: 3, 100, 225;
