--- a/src/styles/archive/search.module.css
+++ b/src/styles/archive/search.module.css
@@ -31,3 +31,23 @@
     border: 2px solid rgba(var(--brand-blue-rgb), 0.5);
     background-color: var(--color-background);
 }
+
+.clearButton {
+    display: grid;
+    place-items: center;
+    padding: 0;
+    position: absolute;
+    right: 0.6rem;
+    top: 50%;
+    transform: translateY(-50%);
+    border: 0;
+    border-radius: 50%;
+    font-size: 0.8rem;
+    line-height: 0;
+    height: 0.8rem;
+    width: 0.8rem;
+    cursor: pointer;
+    color: rgba(var(--color-background-rgb), 0.8);
+    background-color: rgba(var(--color-foreground-rgb), 0.6);
+    transition: opacity 120ms ease;
+  }
