--- a/src/styles/desktop/windowFrame.module.css
+++ b/src/styles/desktop/windowFrame.module.css
@@ -14,7 +14,9 @@
   right: 0;
   bottom: 0;
   z-index: -1;
-  box-shadow: inset 1px 0 0 0 rgba(var(--color-foreground-rgb), 0.1);
+  box-shadow: inset 1px 0 0 0 rgba(var(--color-foreground-rgb), 0.1),
+  inset 0 -1px 1px 0 rgba(0, 0, 0, 0.1);
+
 }
 
 /* keep the close button at absolute left */
@@ -69,6 +71,8 @@
 .aboutWindowFrame .titleBar {
     justify-content: center;
     height: 1.5rem;
+    box-shadow: inset 0 -1px 1px 0 rgba(0, 0, 0, 0.1);
+
 
   }
   
@@ -123,7 +127,6 @@
   display: flex;
   align-items: center;
   padding: var(--space-xxs) var(--space-md);
-  background: #f3f4f6;
   user-select: none;
   cursor: default;
 }
@@ -164,7 +167,6 @@
   inset: 0;                 /* stretch over full area */
   pointer-events: none;     /* keep clicks on content */
   border-radius: inherit;   /* follow outer rounding  */
-  box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.15);
   z-index: 1;           /* above content, below title */
 }
 
