--- a/src/styles/archive/archiveItem.module.css
+++ b/src/styles/archive/archiveItem.module.css
@@ -100,9 +100,11 @@
     background: #fff;
     padding: 2px;
     box-shadow: 0 0 0.1rem rgba(0, 0, 0, 0.5);
-
+    
+    /* 
     transition: transform 0.2s ease-out;
     transform-origin: top left;
+    */
 }
 
 /* —————————  The image itself (inner inset‐shadow) ————————— */
@@ -115,12 +117,12 @@
     /* box-shadow: inset 0 0 0.1rem rgba(0, 0, 0, 0.5);*/
 }
 
-/* — scale up on hover, keeping it on top — */
+/* — scale up on hover, keeping it on top —
 .thumbnailWrapper:hover {
     transform: scale(4.2);
     z-index: 11;
 }
-
+ */
 
 @media (max-width: 768px) {
 
